bitbytedata_lib = static_library(
    'BitByteData',
    'BigEndianByteReader.swift',
    'BitReader.swift',
    'BitWriter.swift',
    'ByteReader.swift',
    'Extensions.swift',
    'LittleEndianByteReader.swift',
    'LsbBitReader.swift',
    'LsbBitWriter.swift',
    'MsbBitReader.swift',
    'MsbBitWriter.swift',
    'SignedNumberRepresentation.swift',
)
bitbytedata_dep = declare_dependency(link_with: bitbytedata_lib)
